Make sure mobile header ain't spilling over

--- a/src/components/Layout/MobileHeader.module.css
+++ b/src/components/Layout/MobileHeader.module.css
@@ -4,6 +4,7 @@
   z-index: 1;
   display: grid;
   padding: 1rem;
+  width: 100%;
 
   align-items: center;
 
